--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=DHT11
 version=1.0.0
-author=Your Name
-maintainer=Your Name <your.email@example.com>
+author=ekozkan
+maintainer=ekozkan
 sentence=A simple Arduino library for DHT11 temperature and humidity sensor.
 paragraph=This library provides easy to use functions to read temperature and humidity from DHT11 sensors, with checksum verification and debug output.
 category=Sensors
-url=https://github.com/YOUR_USERNAME/DHT11
+url=https://github.com/ekozkan/DHT11
 architectures=*
